@startuml

hide empty methods
hide empty fields
hide circle

package Server {
  class ClassFinder {
    +getClassInfo(FQN) : ClassInfo
  }

  class ClassInfo {
    -FQN
    -timestamp/version
    -bytecode
    -crc
  }

  class ClassLoaderServer

  ClassFinder *-- ClassInfo

  ClassLoaderServer --> ClassFinder
}

package Client {
  class SmvApp
  class SmvClassLoader
  class ClassLoaderClientInterface

  SmvApp *-- "*" SmvClassLoader
  SmvApp *-- "1" ClassLoaderClientInterface


  SmvClassLoader "*" o-- ClassLoaderClientInterface

  class LocalClassLoaderClient extends ClassLoaderClientInterface
  class ClassLoaderClient extends ClassLoaderClientInterface

  ClassLoaderClient .L.> ClassLoaderServer : tcp/ip
  LocalClassLoaderClient -L-> ClassFinder
}
@enduml
